src/objects/pse_Vote__c.object
<CustomObject>
    <description>Contains information about votes on ideas. Used to make :
 -  sure a user only votes once
 - reports &amp; dashboards</description>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the idea record an employee has voted on.</description>
        <inlineHelpText>Id of the idea record an employee has voted on.</inlineHelpText>
        <label>Idea</label>
        <referenceTo>pse_Idea__c</referenceTo>
        <relationshipLabel>Votes</relationshipLabel>
        <relationshipName>Votes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Has_Voted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the employee has voted.</description>
        <inlineHelpText>Indicates whether or not the employee has voted.</inlineHelpText>
        <label>Has Voted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse_VoteDown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The employee doesn&apos;t like this idea.</description>
        <inlineHelpText>The employee doesn&apos;t like this idea.</inlineHelpText>
        <label>VoteDown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse_VoteUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The employee likes this idea.</description>
        <inlineHelpText>The employee likes this idea.</inlineHelpText>
        <label>VoteUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse_Voter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the employee that has voted.</description>
        <inlineHelpText>Id of the employee that has voted.</inlineHelpText>
        <label>Voter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Votes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Idea__c</columns>
        <columns>pse_Voter__c</columns>
        <columns>pse_Has_Voted__c</columns>
        <columns>pse_VoteDown__c</columns>
        <columns>pse_VoteUp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>